added installation list

--- a/Assets/images/Application Error_files/application-error.html
+++ b/Assets/images/Application Error_files/application-error.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0060)https://www.herokucdn.com/error-pages/application-error.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport"> <title>Application error | Heroku </title> <link rel="shortcut icon" type="image/x-icon" href="https://www.herokucdn.com/favicon.ico"> <style>html, body {
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalabel=no" name="viewport"> <title>Application error | Heroku </title> <link rel="shortcut icon" type="image/x-icon" href="https://www.herokucdn.com/favicon.ico"> <style>html, body {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
